--- a/index.html
+++ b/index.html
@@ -4,377 +4,317 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
   <title>Practicar Japonés</title>
-<style>
-/* -------------------- General -------------------- */
-body {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  margin: 0;
-  padding: 0 20px 120px; /* espacio abajo para botón fijo */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
 
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  padding: 15px 0;
-  font-weight: bold;
-  font-size: 1.2rem;
-  color: #34495e;
-}
+  <style>
+    body {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0 20px 120px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
 
-/* -------------------- Secciones -------------------- */
-.section {
-  width: 100%;
-  max-width: 960px;
-  margin-bottom: 20px;
-  background: #fff;
-  padding: 15px;
-  border-radius: 16px;
-  background: #ecf7ff;
-}
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      padding: 15px 0;
+      font-weight: bold;
+      font-size: 1.2rem;
+      color: #34495e;
+    }
 
-.section-title {
-  font-weight: bold;
-  font-size: 1.2rem;
-  margin-bottom: 10px;
-  color: #2c3e50;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
+    .section {
+      width: 100%;
+      max-width: 960px;
+      margin-bottom: 20px;
+      padding: 15px;
+      border-radius: 16px;
+      background: #ecf7ff;
+    }
 
-/* -------------------- Grid de niveles -------------------- */
-.level-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
-  gap: 4px; /* compacto */
-  justify-items: center;
-  align-items: center;
-}
+    .section-title {
+      font-weight: bold;
+      font-size: 1.2rem;
+      margin-bottom: 10px;
+      color: #2c3e50;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
 
-.level-card {
-  width: calc(100% - 30px);
-  height: 60px;
-  padding: 15px;
-  background: #fefefe;
-  border-radius: 12px;
-  display: grid;
-  place-items: center; /* centra el contenido */
-  box-shadow: 0 3px 10px rgba(0,0,0,0.1);
-  transition: transform 0.2s, box-shadow 0.2s, color 0.2s;
-  font-size: 14px;
-  color: #000;
-  text-align: center;
-  cursor: pointer;
-}
+    .level-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
+      gap: 4px;
+      justify-items: center;
+      align-items: center;
+    }
 
-.level-card:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 6px 15px rgba(0,0,0,0.12);
-}
+    .level-card {
+      width: calc(100% - 30px);
+      height: 60px;
+      padding: 15px;
+      background: #fefefe;
+      border-radius: 12px;
+      display: grid;
+      place-items: center;
+      box-shadow: 0 3px 10px rgba(0, 0, 0, .1);
+      transition: .2s;
+      font-size: 14px;
+      color: #000;
+      text-align: center;
+      cursor: pointer;
+    }
 
-.level-card.selected {
-  background: #3498db;
-  color: #fff;
-}
+    .level-card:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 6px 15px rgba(0, 0, 0, .12);
+    }
 
-/* -------------------- Botón Practicar / Comenzar -------------------- */
-#fixedPlayButton {
-  height: 48px;
-  width: 100%;
-  padding: 0 15px;
-  font-size: 12px;
-  font-weight: 600;
-  border-radius: 12px;
-  border: none;
-  background: #bdc3c7;
-  color: #fff;
-  cursor: not-allowed;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: background 0.3s, box-shadow 0.2s;
-  font-size: 16px;
-}
+    .level-card.selected {
+      background: #3498db;
+      color: #fff;
+    }
 
-#fixedPlayButton.active {
-  background: #3498db;
-  cursor: pointer;
-  box-shadow: 0 3px 10px rgba(0,0,0,0.15);
-}
+    #fixedPlayButton,
+    #examToggleButton {
+      height: 48px;
+      width: 50%;
+      padding: 0 15px;
+      font-weight: 600;
+      border: none;
+      border-radius: 12px;
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: .3s;
+      font-size: 16px;
+    }
 
-/* -------------------- Botón Examen -------------------- */
-#examToggleButton {
-  height: 48px;
-  padding: 0 12px;
-  font-size: 12px;
-  font-weight: 600;
-  border-radius: 12px;
-  border: none;
-  background: #2ecc71; /* verde */
-  color: #fff;
-  cursor: pointer;
-  transition: background 0.5s, box-shadow 0.2s;
-}
+    #fixedPlayButton {
+      background: #bdc3c7;
+      cursor: not-allowed;
+    }
 
-#examToggleButton.active {
-  background: #cc2e2e;
-  box-shadow: 0 3px 10px rgba(0,0,0,0.15);
-}
+    #fixedPlayButton.active {
+      background: #3498db;
+      cursor: pointer;
+      box-shadow: 0 3px 10px rgba(0, 0, 0, .15);
+    }
 
-/* -------------------- Texto veces completado -------------------- */
-#completedTimes {
-  font-size: 12px;
-  color: #2c3e50;
-  font-weight: 500;
-}
+    #examToggleButton {
+      background: #2ecc71;
+      cursor: pointer;
+    }
 
-#completedTimes.instruction {
-  color: #7f8c8d;
-  font-style: italic;
-}
+    #examToggleButton.active {
+      background: #cc2e2e;
+      box-shadow: 0 3px 10px rgba(0, 0, 0, .15);
+    }
 
+    #completedTimes {
+      font-size: 12px;
+      color: #2c3e50;
+      font-weight: 500;
+    }
 
-/* -------------------- Contenedor fijo de práctica -------------------- */
+    #completedTimes.instruction {
+      color: #7f8c8d;
+      font-style: italic;
+    }
 
-#practiceContainerBack {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 125px;
+    #practiceContainerBack {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      height: 125px;
+      background: linear-gradient(to top, rgba(255, 255, 255, .4) 0%, rgba(255, 255, 255, 0) 50%);
+      backdrop-filter: blur(1px);
+      -webkit-backdrop-filter: blur(1px);
+      z-index: 100;
+    }
 
-  background: linear-gradient(to top, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0) 50%);
-  backdrop-filter: blur(1px);
-  -webkit-backdrop-filter: blur(1px);
-  z-index: 100;
-}
+    #practiceContainer {
+      position: fixed;
+      bottom: 15px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #fff;
+      padding: 10px 15px;
+      border-radius: 12px;
+      box-shadow: 0 5px 19px 1px rgba(0, 0, 0, .28);
+      display: flex;
+      gap: 10px;
+      z-index: 100;
+      min-width: 250px;
+      justify-content: space-between;
+    }
 
+    .examButton {
+      background: #ecf0f1;
+      border: none;
+      padding: 4px 8px;
+      border-radius: 6px;
+      font-size: 12px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background .2s;
+    }
 
-#practiceContainer {
-  position: fixed;
-  bottom: 15px;
-  left: 50%;
-  transform: translateX(-50%);
-  background: #fff;
-  padding: 10px 15px;
-  border-radius: 12px;
-  box-shadow: 0 5px 19px 1px rgb(0 0 0 / 28%);
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  z-index: 100;
-  min-width: 250px;
-  justify-content: space-between;
-  flex-direction: column;
-}
+    .examButton:hover {
+      background: #d0d7de;
+    }
 
-/* -------------------- Botones examen internos -------------------- */
-.examButton {
-  background: #ecf0f1;
-  border: none;
-  padding: 4px 8px;
-  border-radius: 6px;
-  font-size: 12px;
-  font-weight: 600;
-  cursor: pointer;
-  transition: background 0.2s;
-}
+    .level-card h3 {
+      margin: 0;
+      font-size: 14px;
+    }
 
-.examButton:hover {
-  background: #d0d7de;
-}
-
-/* -------------------- Tipografía de tarjetas -------------------- */
-.level-card h3 {
-  margin: 0;
-  font-size: 14px;
-}
-
-.level-card p {
-  margin: 0;
-  font-size: 12px;
-  color: #7f8c8d;
-}
-</style>
+    .level-card p {
+      margin: 0;
+      font-size: 12px;
+      color: #7f8c8d;
+    }
+  </style>
 </head>
 <body>
-<header>
-  Japanaap V0.1.1
-  <button id="examToggleButton">Examen</button>
-</header>
+  <header>Japanaap V0.1.1</header>
 
-<!-- Sección Hiragana -->
-<div class="section" id="hiraganaSection">
-  <div class="section-title">
-    Hiragana
+  <div class="section">
+    <div class="section-title">Hiragana</div>
+    <div id="hiragana"></div>
   </div>
-  <div id="hiragana" class="level-container"></div>
-</div>
 
-<!-- Sección Katakana -->
-<div class="section" id="katakanaSection">
-  <div class="section-title">
-    Katakana
+  <div class="section">
+    <div class="section-title">Katakana</div>
+    <div id="katakana"></div>
   </div>
-  <div id="katakana" class="level-container"></div>
-</div>
 
-<!-- Sección Vocabulario Básico -->
-<div class="section" id="vocabularyBasicSection">
-  <div class="section-title">
-    Vocabulario Básico
+  <div class="section">
+    <div class="section-title">Vocabulario Básico</div>
+    <div id="vocabularyBasic"></div>
   </div>
-  <div id="vocabularyBasic" class="level-container"></div>
-</div>
 
-<!-- Contenedor fijo de práctica -->
-<div id="practiceContainerBack"></div>
-<div id="practiceContainer">
-  <button id="fixedPlayButton">Practicar</button>
-  <span id="completedTimes">Completado 0 veces</span>
-</div>
+  <div id="practiceContainerBack"></div>
 
-<script src="./js/catsList.js"></script>
-<script src="./js/hiraganaList.js"></script>
-<script src="./js/katakanaList.js"></script>
-<script src="./js/vocabularyBasicList.js"></script>
+  <div id="practiceContainer">
+    <button id="examToggleButton">Examen</button>
+    <button id="fixedPlayButton">Practicar</button>
+    <span id="completedTimes">Completado 0 veces</span>
+  </div>
 
-<script>
-const fixedPlayButton = document.getElementById("fixedPlayButton");
-const examToggleButton = document.getElementById("examToggleButton");
-const completedTimesSpan = document.getElementById("completedTimes");
+  <script src="./js/catsList.js"></script>
+  <script src="./js/hiraganaList.js"></script>
+  <script src="./js/katakanaList.js"></script>
+  <script src="./js/vocabularyBasicList.js"></script>
 
-let selectedCard = null;
-let examMode = false;
-let examSelection = []; // array para exam
+  <script>
+    const fixedBtn = document.getElementById("fixedPlayButton"),
+          examBtn = document.getElementById("examToggleButton"),
+          times = document.getElementById("completedTimes");
 
-function createGrid(containerId, levelsList) {
-    const container = document.getElementById(containerId);
-    container.innerHTML = ""; // Limpiar
+    let selected = null,
+        examMode = false,
+        examSel = [];
 
-    const grid = document.createElement("div");
-    grid.className = "level-grid";
+    function createGrid(id, list) {
+      const grid = document.createElement("div");
+      grid.className = "level-grid";
 
-    levelsList.forEach((level, index) => {
-        const card = document.createElement("div");
-        card.className = "level-card";
-        card.dataset.category = containerId;
-        card.dataset.level = level.level;
-        card.dataset.index = index;
+      list.forEach((lvl, i) => {
+        const c = document.createElement("div");
+        c.className = "level-card";
+        c.dataset.category = id;
+        c.dataset.level = lvl.level;
+        c.dataset.index = i;
+        c.innerHTML = `<h3>${lvl.name}</h3>`;
 
-        const title = document.createElement("h3");
-        title.textContent = level.name;
-        card.appendChild(title);
+        c.onclick = () => {
+          const storage = JSON.parse(localStorage.getItem("levelCompleted") || "[]"),
+                lvlData = storage.find(x => x.category == id && Number(x.levelId) == i),
+                done = lvlData ? lvlData.completedTimes || 0 : 0;
 
-        card.addEventListener("click", () => {
-            const storage = JSON.parse(localStorage.getItem("levelCompleted") || "[]");
-            const currentLevelStorage = storage.find(item =>
-                item.category == containerId && Number(item.levelId) == index
-            );
-            const completedTimes = currentLevelStorage ? currentLevelStorage.completedTimes || 0 : 0;
+          if (examMode) {
+            c.classList.toggle("selected");
+            examSel = c.classList.contains("selected")
+              ? [...examSel, c]
+              : examSel.filter(x => x !== c);
 
-            if (examMode) {
-                // Examen: selección múltiple
-                if (examSelection.includes(card)) {
-                    card.classList.remove("selected");
-                    examSelection = examSelection.filter(c => c !== card);
-                } else {
-                    card.classList.add("selected");
-                    examSelection.push(card);
-                }
-                fixedPlayButton.classList.toggle("active", examSelection.length > 0);
-
-                // Mostrar SIEMPRE instrucción en examen
-                if (examSelection.length === 0) {
-                    completedTimesSpan.textContent = "Selecciona los módulos a añadir al examen";
-                } else {
-                    completedTimesSpan.textContent = "Listo para comenzar el examen";
-                }
-                completedTimesSpan.classList.add("instruction");
+            fixedBtn.classList.toggle("active", examSel.length > 0);
+            times.textContent = examSel.length
+              ? "Listo para comenzar el examen"
+              : "Selecciona los módulos a añadir al examen";
+            times.classList.add("instruction");
+          } else {
+            if (selected === c) {
+              c.classList.remove("selected");
+              selected = null;
+              fixedBtn.classList.remove("active");
+              times.textContent = "Completado 0 veces";
+              times.classList.remove("instruction");
             } else {
-                // Modo normal: selección única
-                if (selectedCard === card) {
-                    card.classList.remove("selected");
-                    selectedCard = null;
-                    fixedPlayButton.classList.remove("active");
-                    completedTimesSpan.textContent = `Completado 0 veces`;
-                    completedTimesSpan.classList.remove("instruction");
-                } else {
-                    if (selectedCard) selectedCard.classList.remove("selected");
-                    card.classList.add("selected");
-                    selectedCard = card;
-                    fixedPlayButton.classList.add("active");
-                    completedTimesSpan.textContent = `Completado ${completedTimes} veces`;
-                    completedTimesSpan.classList.remove("instruction");
-                }
+              if (selected) selected.classList.remove("selected");
+              c.classList.add("selected");
+              selected = c;
+              fixedBtn.classList.add("active");
+              times.textContent = `Completado ${done} veces`;
+              times.classList.remove("instruction");
             }
-        });
+          }
+        };
 
-        grid.appendChild(card);
-    });
+        grid.appendChild(c);
+      });
 
-    container.appendChild(grid);
-}
-
-
-// Toggle examen
-examToggleButton.addEventListener("click", () => {
-    examMode = !examMode;
-    examToggleButton.classList.toggle("active", examMode);
-    fixedPlayButton.textContent = examMode ? "Comenzar" : "Practicar";
-    examToggleButton.textContent = examMode ? "Cancelar" : "Examen";
-
-    if(examMode){
-        // mostrar instrucción en vez de contador
-        completedTimesSpan.textContent = "Selecciona los módulos a añadir al examen";
-        completedTimesSpan.classList.add("instruction");
-    } else {
-        // volver a contador normal
-        examSelection.forEach(card => card.classList.remove("selected"));
-        examSelection = [];
-        fixedPlayButton.classList.remove("active");
-        completedTimesSpan.textContent = `Completado 0 veces`;
-        completedTimesSpan.classList.remove("instruction");
+      document.getElementById(id).appendChild(grid);
     }
-});
 
+    examBtn.onclick = () => {
+      examMode = !examMode;
+      examBtn.classList.toggle("active", examMode);
+      fixedBtn.textContent = examMode ? "Comenzar" : "Practicar";
+      examBtn.textContent = examMode ? "Cancelar" : "Examen";
 
-// Botón principal
-fixedPlayButton.addEventListener("click", () => {
-    if(examMode && examSelection.length>0){
-        // GET con múltiples niveles
-        const query = examSelection.map(c => `${c.dataset.category}List-${c.dataset.level}`).join(",");
-        location.href = `examGround.html?exam=${query}`;
-    } else if(!examMode && selectedCard){
-        const category = selectedCard.dataset.category;
-        const level = selectedCard.dataset.level;
-        location.href = `practiceGround.html?play=${category}List&level=${level}`;
-    }
-});
+      if (examMode) {
+        if (selected) {
+          fixedBtn.classList.remove("active");
+          selected.classList.remove("selected");
+          selected = null;
+        }
+        times.textContent = "Selecciona los módulos a añadir al examen";
+        times.classList.add("instruction");
+      } else {
+        examSel.forEach(c => c.classList.remove("selected"));
+        examSel = [];
+        fixedBtn.classList.remove("active");
+        times.textContent = "Completado 0 veces";
+        times.classList.remove("instruction");
+      }
+    };
 
-// Crear grids
-createGrid("hiragana", hiraganaList.levels);
-createGrid("katakana", katakanaList.levels);
-createGrid("vocabularyBasic", vocabularyBasicList.levels);
+    fixedBtn.onclick = () => {
+      if (examMode && examSel.length) {
+        location.href = `practiceGround.html?exam=${examSel.map(c => `${c.dataset.category}List-${c.dataset.level}`).join(",")}`;
+      } else if (!examMode && selected) {
+        location.href = `practiceGround.html?play=${selected.dataset.category}List&level=${selected.dataset.level}`;
+      }
+    };
 
+    ["hiragana", "katakana", "vocabularyBasic"].forEach((id, i) =>
+      createGrid(id, [hiraganaList, katakanaList, vocabularyBasicList][i].levels)
+    );
 
-// Guardar scroll al salir de la página
-window.addEventListener("beforeunload", () => {
-    localStorage.setItem("lastScrollPosition", window.scrollY);
-});
+    window.addEventListener("beforeunload", () =>
+      localStorage.setItem("lastScrollPosition", window.scrollY)
+    );
 
-// Restaurar scroll al entrar
-window.addEventListener("load", () => {
-    const lastScroll = localStorage.getItem("lastScrollPosition");
-    if (lastScroll) {
-        window.scrollTo(0, Number(lastScroll));
-    }
-});
-
-</script>
+    window.addEventListener("load", () =>
+      window.scrollTo(0, Number(localStorage.getItem("lastScrollPosition") || 0))
+    );
+  </script>
 </body>
 </html>
