--- a/practiceGround.html
+++ b/practiceGround.html
@@ -48,99 +48,79 @@
   <script src="js/katakanaList.js"></script>
   <script src="js/vocabularyBasicList.js"></script>
 
-  <script>
-    const params = new URLSearchParams(window.location.search);
-    let play = params.get("play");
-    let exam = params.get("exam");
-    const playingLevel = params.get("level");
+<script>
+  const params = new URLSearchParams(window.location.search);
+  const { play, exam, level: playingLevel } = Object.fromEntries(params);
 
-    let filteredQuizList = [];
-    let section = "";
-    let subSection = "";
-    let subSectionNames = [];
+  const lists = { hiraganaList, katakanaList, vocabularyBasicList };
+  let filteredQuizList = [];
+  let section = "";
+  let subSection = "";
 
-    // Función para barajar
-    function shuffle(array) {
-      for (let i = array.length - 1; i > 0; i--) {
-        const j = Math.floor(Math.random() * (i + 1));
-        [array[i], array[j]] = [array[j], array[i]];
-      }
+  function shuffle(arr) {
+    for (let i = arr.length - 1; i > 0; i--) {
+      const j = Math.floor(Math.random() * (i + 1));
+      [arr[i], arr[j]] = [arr[j], arr[i]];
     }
+    return arr;
+  }
 
-    if (exam) {
-      // --------- MODO EXAMEN ---------
-      const selections = exam.split(",");
-      let subLists = [];
-      const maxPreguntas = 10;
+  function setPageTitle(main, sub = "") {
+    const el = document.getElementById("pageTitle");
+    el.innerHTML = sub ? `${main} <span class="subsection">[${sub}]</span>` : main;
+  }
 
-      selections.forEach(sel => {
-        const [listName, levelStr] = sel.split("-");
-        const level = parseInt(levelStr);
+  if (exam) {
+// --------- MODO EXAMEN ----------------------------------------
+    const selections = exam.split(",");
+    const maxPreguntas = 1;
+    const subLists = [];
+    const subSectionNames = [];
 
-        let currentList;
-        if (listName === "hiraganaList") currentList = hiraganaList;
-        else if (listName === "katakanaList") currentList = katakanaList;
-        else if (listName === "vocabularyBasicList") currentList = vocabularyBasicList;
-        else {
-          console.error("Tipo de lista no válido:", listName);
-          return;
-        }
+    selections.forEach(sel => {
+      const [listName, levelStr] = sel.split("-");
+      const currentList = lists[listName];
+      if (!currentList) return console.error("Lista inválida:", listName);
 
-        if (!section) section = currentList.category;
+      if (!section) section = currentList.category;
 
-        const levelData = currentList.levels.find(l => l.level === level);
-        if (levelData) {
-          const markedItems = levelData.items.map(it => ({
+      const level = parseInt(levelStr);
+      const levelData = currentList.levels.find(l => l.level === level);
+      if (levelData) {
+        subLists.push(
+          levelData.items.map(it => ({
             ...it,
             origin: currentList.category,
             sublevel: levelData.name
-          }));
-          subLists.push(markedItems);
-          subSectionNames.push(`${currentList.category}: ${levelData.name}`);
-        } else {
-          console.error(`Nivel ${level} no encontrado en ${listName}`);
-        }
-      });
-
-      // Repartir preguntas de forma equilibrada
-      const totalListas = subLists.length;
-      const base = Math.floor(maxPreguntas / totalListas);
-      const resto = maxPreguntas % totalListas;
-
-      subLists.forEach((lista, i) => {
-        let cantidad = base + (i < resto ? 1 : 0);
-        let seleccionadas = lista.sort(() => 0.5 - Math.random()).slice(0, cantidad);
-        filteredQuizList.push(...seleccionadas);
-      });
-
-      shuffle(filteredQuizList);
-      document.getElementById("pageTitle").innerHTML =
-        `Examen <span class="subsection">[${subSectionNames.join(", ")}]</span>`;
-
-    } else if (play) {
-      // --------- MODO LISTA NORMAL ---------
-      let quizList;
-      if (play === "hiraganaList") quizList = hiraganaList;
-      else if (play === "katakanaList") quizList = katakanaList;
-      else if (play === "vocabularyBasicList") quizList = vocabularyBasicList;
-      else console.error("No se ha especificado un tipo de juego válido");
-
-      if (!playingLevel) {
-        console.error("No se ha especificado un nivel de juego válido");
-      } else {
-        filteredQuizList = quizList.levels[playingLevel].items;
-        shuffle(filteredQuizList);
-
-        section = quizList.category;
-        subSection = quizList.levels[playingLevel].name;
-
-        document.getElementById("pageTitle").innerHTML =
-          `${section} <span class="subsection">[${subSection}]</span>`;
+          }))
+        );
+        subSectionNames.push(`${currentList.category}: ${levelData.name}`);
       }
-    } else {
-      console.error("No se ha especificado un modo válido (ni play ni exam).");
+    });
+
+    const total = subLists.length;
+    const base = Math.floor(maxPreguntas / total);
+    const resto = maxPreguntas % total;
+
+    subLists.forEach((lista, i) => {
+      filteredQuizList.push(...shuffle(lista).slice(0, base + (i < resto ? 1 : 0)));
+    });
+
+    shuffle(filteredQuizList);
+    setPageTitle("Examen", subSectionNames.join(", "));
+
+  } else if (play) {
+// --------- MODO NORMAL ----------------------------------------
+    const quizList = lists[play];
+    if (quizList && playingLevel) {
+      filteredQuizList = shuffle(quizList.levels[playingLevel].items);
+      section = quizList.category;
+      subSection = quizList.levels[playingLevel].name;
+      setPageTitle(section, subSection);
     }
-  </script>
+  }
+</script>
+
 
   <script src="js/quizLogic.js"></script>
 </body>
